Modified HandshakeScanner so it returns correct output @vijay
config.json carries new ciphers